--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/firestore": "^14.3.0",
     "@react-navigation/native": "^6.0.6",
@@ -17,11 +18,16 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-device-info": "^8.4.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
