--- a/ios/LuckGame.xcodeproj/xcshareddata/xcschemes/LuckGame.xcscheme
+++ b/ios/LuckGame.xcodeproj/xcshareddata/xcschemes/LuckGame.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "wartanks.app"
-               BlueprintName = "wartanks"
-               ReferencedContainer = "container:wartanks.xcodeproj">
+               BuildableName = "LuckGame.app"
+               BlueprintName = "LuckGame"
+               ReferencedContainer = "container:LuckGame.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "wartanksTests.xctest"
-               BlueprintName = "wartanksTests"
-               ReferencedContainer = "container:wartanks.xcodeproj">
+               BuildableName = "LuckGameTests.xctest"
+               BlueprintName = "LuckGameTests"
+               ReferencedContainer = "container:LuckGame.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "wartanks.app"
-            BlueprintName = "wartanks"
-            ReferencedContainer = "container:wartanks.xcodeproj">
+            BuildableName = "LuckGame.app"
+            BlueprintName = "LuckGame"
+            ReferencedContainer = "container:LuckGame.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "wartanks.app"
-            BlueprintName = "wartanks"
-            ReferencedContainer = "container:wartanks.xcodeproj">
+            BuildableName = "LuckGame.app"
+            BlueprintName = "LuckGame"
+            ReferencedContainer = "container:LuckGame.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
