--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+MYAPP_UPLOAD_STORE_FILE=luck-game.keystore
+MYAPP_UPLOAD_KEY_ALIAS=luck-game-key
+MYAPP_UPLOAD_STORE_PASSWORD=RealMadrid.11
+MYAPP_UPLOAD_KEY_PASSWORD=RealMadrid.11
